--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Hello world</title>
+    <title><%= project %></title>
     <link rel="stylesheet" href="../css/common.css">
     <link rel="stylesheet" href="../css/blocks.css">
   </head>
